Fix style issues from overview use of global selectors
- overview styles used a lot of "global" selectors (as in selectors for specific elements `a` for example)
- this messed up a lot of existing styles in the options app
- may still be some more

--- a/src/overview/onboarding/components/Onboarding.css
+++ b/src/overview/onboarding/components/Onboarding.css
@@ -7,10 +7,10 @@
     justify-content: space-between;
     text-align: center;
     box-shadow: 0px 6px 7px -7px #777;
-}
 
-a {
-    text-decoration: none !important; /* stylelint-disable-line declaration-no-important */
+    & a {
+        text-decoration: none !important; /* stylelint-disable-line declaration-no-important */
+    }
 }
 
 .choiceBtnContainer {
